--- a/Buoi3/views/hienthi.ejs
+++ b/Buoi3/views/hienthi.ejs
@@ -12,24 +12,44 @@
     <link href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet" type="text/css" />
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800" rel="stylesheet" type="text/css" />
     <!-- Core theme CSS (includes Bootstrap)-->
-   
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    
+    <style>
+        .table th, .table td {
+            text-align: center;
+            vertical-align: middle;
+        }
+        .btn-update {
+            color: white;
+            background-color: #007bff;
+            border: none;
+        }
+        .btn-delete {
+            color: white;
+            background-color: #dc3545;
+            border: none;
+        }
+    </style>
 </head>
 <body>
-    <h2> Danh sach tai khoan</h2>
+    <div class="container">
+    <h2> Danh sách tài khoản</h2>
 
-    <a href="/themdulieu"> Them du lieu</a>
+    <a href="/themdulieu" class="btn btn-primary">
+        <i class="fas fa-plus"></i> Thêm dữ liệu
+    </a>
 
-    <div class="container pt-3">
-        <table>
-            <thead>
+    
+        <table class="table table-bordered table-striped">
+            <thead class="thead-dark">
                 <tr>
                     <th>Account ID</th>
                     <th>Lastname</th>
                     <th>Firstname</th>
                     <th>Address</th>
                     <th>City </th>
-                    <th></th>
-                    <th></th>
+                    <th>Xóa</th>
+                    <th>Sửa</th>
                 </tr>
             </thead>
             <% persons.forEach(person => { %>
@@ -40,13 +60,18 @@
                     <td><%= person.Address     %></td>
                     <td><%= person.City   %></td>
                     <td><form action="/delete/<%= person.PersonID %>" method="post" style="display:inline;">
-                        <button type="submit">Xoa</button>
+                        <button type="submit" class="btn btn-delete btn-sm">Xóa
+                            <i class="fas fa-trash-alt"></i>
+                        </button>
                     </form></td>
-                    <td><a href="/update/<%= person.PersonID%>"> Sua</a></td>
+                    <td><a href="/update/<%= person.PersonID%>" class="btn btn-update btn-sm"> Sửa</a></td>
             </tbody>
             <% }); %>
         </table>
     </div>
-    
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
 </body>
 </html>
