--- a/Buoi3/views/themdulieu.ejs
+++ b/Buoi3/views/themdulieu.ejs
@@ -2,26 +2,50 @@
 <html>
 <head>
     <title>Persons</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Danh sach Account</title>
+    <link rel="stylesheet" href="/css/style.css">
+    <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+    <!-- Font Awesome icons (free version)-->
+    <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
+    <!-- Google fonts-->
+    <link href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet" type="text/css" />
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800" rel="stylesheet" type="text/css" />
+    <!-- Core theme CSS (includes Bootstrap)-->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <style>
+        .form-group {
+            margin-bottom: 2px; 
+        }
+    </style>
 </head>
 <body>
+    <div class="container">
 
-    <h2>Add New User</h2>
+    <h2>Thêm dữ liệu</h2>
     <form action="/themdulieu" method="post">
-
-        <label for="LastName">LastName:</label>
-        <input type="text" id="LastName" name="LastName" required><br><br>
-
-        <label for="LastName">FirstName:</label>
-        <input type="text" id="FirstName" name="FirstName" required><br><br>
-
-        <label for="LastName">Address:</label>
-        <input type="text"  name="Address" required><br><br>
-
-        <label for="LastName">City:</label>
-        <input type="text"  name="City" required><br><br>
-
-        <button type="submit">Add Person</button>
+        <div class="form-group">
+            <label for="LastName">LastName:</label>
+            <input type="text" class="form-control" id="LastName" name="LastName" required><br><br>
+        </div>
+        <div class="form-group">
+            <label for="LastName">FirstName:</label>
+            <input type="text" class="form-control" id="FirstName" name="FirstName" required><br><br>
+        </div>
+        <div class="form-group">
+            <label for="LastName">Address:</label>
+            <input type="text" class="form-control"  name="Address" required><br><br>
+        </div>
+        <div class="form-group">
+            <label for="LastName">City:</label>
+            <input type="text" class="form-control" name="City" required><br><br>
+        </div>
+        <button type="submit" class="btn btn-primary">Thêm Person</button>
     </form>
-
+    </div>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
