--- a/Buoi3/views/update.ejs
+++ b/Buoi3/views/update.ejs
@@ -1,19 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <title>Sua du lieu</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sua du lieu</title>
+    <title>Danh sach Account</title>
+    <link rel="stylesheet" href="/css/style.css">
+    <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+    <!-- Font Awesome icons (free version)-->
+    <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
+    <!-- Google fonts-->
+    <link href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet" type="text/css" />
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800" rel="stylesheet" type="text/css" />
+    <!-- Core theme CSS (includes Bootstrap)-->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
 <body>
-    <form action="/update/<%= persons.PersonID %>" method="post">
-        <label>Address</label>
-        <input type="text" name="Address" value="<%= persons.Address %>" required></br>
-        <label>City</label>
-        <input type="text" name="City" value="<%= persons.City %>" required></br>
-        
-        <button type="submit"> Chinh sua </button>
-    </form>
+    <div class="container">
+        <h2>Sửa dữ liệu</h2>
+        <form action="/update/<%= persons.PersonID %>" method="post">
+            <div class="form-group">
+                <label>Address</label>
+                <input type="text" class="form-control" name="Address" value="<%= persons.Address %>" required></br>
+            </div>
+            
+            <div class="form-group">
+                <label>City</label>
+                <input type="text" class="form-control" name="City" value="<%= persons.City %>" required></br>
+            </div>    
+            <button type="submit" class="btn btn-primary"> Cập nhật </button>
+        </form>
+
+    </div>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
     
 </body>
