c r u d cap nhat time kiem theo ID

--- a/Buoi3/views/update.ejs
+++ b/Buoi3/views/update.ejs
@@ -18,6 +18,9 @@
 <body>
     <div class="container">
         <h2>Sửa dữ liệu</h2>
+        <a href="/hienthi" class="btn btn-primary">
+            <i class="fas fa-plus"></i> Hiển thị danh sách
+        </a>
         <form action="/update/<%= persons.PersonID %>" method="post">
             <div class="form-group">
                 <label>Address</label>
