--- a/Buoi3/views/hienthi.ejs
+++ b/Buoi3/views/hienthi.ejs
@@ -35,11 +35,24 @@
     <div class="container">
     <h2> Danh sách tài khoản</h2>
 
-    <a href="/themdulieu" class="btn btn-primary">
-        <i class="fas fa-plus"></i> Thêm dữ liệu
-    </a>
-
+    <div class="d-flex justify-content-between align-items-center">
+        <a href="/themdulieu" class="btn btn-primary mr-2 d-inline-block">
+            <i class="fas fa-plus"></i> Thêm dữ liệu
+        </a>
     
+        <a href="/hienthi" class="btn btn-primary mr-2 d-inline-block">
+            <i class="fas fa-plus"></i> Hiển thị danh sách
+        </a>
+    
+        <form action="/hienthi" method="get" class="form-inline mb-4 ">
+            <div class="form-group mx-sm-3 mb-2">
+                <label for="searchId" class="sr-only">Tìm kiếm theo ID</label>
+                <input type="number" class="form-control" id="PersonID" name="PersonID" placeholder="Enter ID">
+            </div>
+            <button type="submit" class="btn btn-primary mb-2">Tìm kiếm</button>
+        </form>
+    </div>
+
         <table class="table table-bordered table-striped">
             <thead class="thead-dark">
                 <tr>
