--- a/Buoi3/views/themdulieu.ejs
+++ b/Buoi3/views/themdulieu.ejs
@@ -23,7 +23,12 @@
 <body>
     <div class="container">
 
+
+
     <h2>Thêm dữ liệu</h2>
+    <a href="/hienthi" class="btn btn-primary">
+        <i class="fas fa-plus"></i> Hiển thị danh sách
+    </a>
     <form action="/themdulieu" method="post">
         <div class="form-group">
             <label for="LastName">LastName:</label>
@@ -41,7 +46,7 @@
             <label for="LastName">City:</label>
             <input type="text" class="form-control" name="City" required><br><br>
         </div>
-        <button type="submit" class="btn btn-primary">Thêm Person</button>
+        <button type="submit" class="btn btn-primary">Thêm dữ liệu</button>
     </form>
     </div>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
